src/objects/Order_Line_Hold__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hold_Comment__c</fullName>
        <label>Hold Comment</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Created_By_Details__c</fullName>
        <label>Hold Created By Details</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Created_By__c</fullName>
        <label>Hold Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Creation_Date__c</fullName>
        <label>Hold Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Description__c</fullName>
        <label>Hold Description</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <label>Order Line</label>
        <referenceTo>Order_Line__c</referenceTo>
        <relationshipLabel>Order Line Holds</relationshipLabel>
        <relationshipName>Order_Line_Holds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Comment__c</fullName>
        <label>Release Comment</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Reason_Code__c</fullName>
        <label>Release Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Released_By_Details__c</fullName>
        <label>Released By Details</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Released_By__c</fullName>
        <label>Released By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Released_Date__c</fullName>
        <label>Released Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Released_flag__c</fullName>
        <label>Released?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Order Line Hold</label>
    <nameField>
        <label>Order Line Hold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>